<resources>
    <string name="app_name">ControlesBasicos</string>
    <string name="optionuno">Opción 1</string>
    <string name="optiondos">Opción 2</string>
    <string name="optiontres">Opción 3</string>
    <string name="getoption">Dame la opción</string>
    <string name="vibrar">Vibrar</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="mail">Mail</string>
    <string name="twitter">Twitter</string>
    <string name="mostrar_datos">Mostrar Datos</string>
    <string name="capturardatos">Capturar Datos</string>
</resources>
